feat: adds health check for services
